crates/ddlog-syntax/tests/parse/pass/parenthesised_literal.rast
ROOT@0..55
  COMMENT@0..50 "// kind:expr validate ..."
  WHITESPACE@50..51 "\n"
  PAREN_EXPR@51..54
    L_PAREN@51..52 "("
    NUMBER@52..53
      NUMBER_LITERAL@52..53 "1"
    R_PAREN@53..54 ")"
  WHITESPACE@54..55 "\n"
